re PR middle-end/32749 (gfortran.dg/auto_array_1.f90)

2007-07-26  Kenneth Zadeck <zadeck@naturalbridge.com>

	PR middle-end/32749
	
	* df-problems.c (df_create_unused_note): Removed do_not_gen parm
	and the updating of the live and do_not_gen sets.
	(df_note_bb_compute): Added updating of live and do_not_gen sets
	for regular defs so that the case of clobber inside conditional
	call is processed correctly.

From-SVN: r126987